--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -18,7 +18,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 
 # {{lb|en|temporal location}} At that [[time]].
 #: {{ux|en|He was happy '''then'''.}}
-#* Bible, {{w|Book of Genesis|Genesis}} 12:6
+#* {{RQ:KJV|Genesis|12|6}}
 #*: And the Canaanite was '''then''' in the land.
 #* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=1
@@ -26,7 +26,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 # {{lb|en|temporal location}} Soon afterward.
 #: {{ux|en|He fixed it, '''then''' left.}}
 #: {{ux|en|Turn left, '''then''' right, '''then''' right again, '''then''' keep going until you reach the service station.}}
-#* Bible, {{w|Gospel of Matthew|Matthew}} 5:24
+#* {{RQ:KJV|Matthew|5|24}}
 #*: First be reconciled to thy brother, and '''then''' come and offer thy gift.
 #* {{quote-book|en|year=1913|author={{w|Joseph C. Lincoln}}
 |title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]|chapter=1
