--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -69,6 +69,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Kurdish:
 *: Central Kurdish: {{t|ckb|گوڵەکەلەم}}
 *: Northern Kurdish: {{t+|kmr|gulkelem}}
+* Latin: {{t|la|brassica oleracea var. botrytis}}, {{t|la|brassica oleracea}}
 * Latvian: {{t|lv|ziedkāposts|m}}
 * Lithuanian: {{t|lt|žiedinis kopūstas|m}}, {{t|lt|žiedbastučiai|m-p}}
 * Macedonian: {{t|mk|карфио́л|m}}
