--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -43,7 +43,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 # To wait for; to await; to remain, abide, or be in store for.
 #* {{RQ:Locke Human}}
 #*: the different state of perfect happiness or misery that '''attends''' all men after this
-#* {{RQ:Dryden The Indian Emperor}}
+#* {{w|John Dryden}}, ''The Indian Emperor''
 #*: Three days I promised to '''attend''' my doom.
 
 =====Synonyms=====
