--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -40,6 +40,7 @@ From the {{w|Gerber}} Childrenswear brand name {{w|Onesies}}. The name became [[
 * Dutch: {{t+|nl|romper|m}}
 {{trans-mid}}
 * Finnish: {{t+|fi|haalari}}
+* French: {{t+|fr|combinaison|f}}
 * Russian: {{t-needed|ru}}
 * Spanish: {{t+|es|mono|m}}
 {{trans-bottom}}
