--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -14,7 +14,7 @@
 {{en-proper noun}}
 
 # The form of the [[English]] language that is chiefly used in the [[United States]], contrasted with [[British English]] or [[Canadian English]] and that of other places.
-# The form of the English language that is chiefly used in [[North America]], contrasted with [[British English]] and that of other places.
+# The form of the English language that is chiefly used in [[North America]], contrasted with [[Commonwealth English]] ([[British English]] and that of other places).
 
 ====Synonyms====
 * {{l|en|AmE}}, {{l|en|AE}}, {{l|en|AmEng}}, {{l|en|Americanese}}
