see also şir <sir#59881948>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -1,4 +1,4 @@
-{{also|SIR|Sir|sir|sır|sír|sîr|șir|şîr|siR}}
+{{also|SIR|Sir|sir|sır|sír|sîr|șir|şîr|şir|siR}}
 ==English==
 {{wikipedia|dab=sir (disambiguation)}}
 
