--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -32,7 +32,7 @@
 {{trans-mid}}
 * Irish: {{t|ga|Freaslainnis|f}}, {{t|ga|Freaslainnis an Iarthir|f}}, {{t|ga|Freaslainnis Iartharach|f}}
 * Italian: {{t|it|frisone occidentale|m}}
-* Japanese: {{t+|ja|フリジア語|tr=Furijia-go}}, {{t|ja|フリース語|tr=Furīsu-go}}
+* Japanese: {{t+|ja|西フリジア語|tr=Nishi-furijia-go}}, {{t|ja|フリジア語|tr=Furijia-go}}
 * Latin: {{t|la|frisice occidentalis|m}}
 * Limburgish: {{t+|li|Wèsfriesj|n}}
 * North Frisian: {{t|frr|Weestfrasch}}
