--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -172,6 +172,7 @@ Probably from {{m|fr|marmotter}}.
 ===Noun===
 {{fr-noun|m|f=marmotte}}
 
+# {{lb|fr|archaic}} An architectural [[grotesque]], especially a door knocker.
 # {{lb|fr|colloquial}} [[kid]], [[brat]]
 
 ===Further reading===
