--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -369,6 +369,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 {{trans-top|disagreement; a difference of viewpoint}}
 * Arabic: {{t|ar|فُرْقَة|f}}
 * Finnish: {{t+|fi|erimielisyys}}
+* Gothic: {{t|got|𐌼𐌹𐍃𐍃𐌰𐌵𐌹𐍃𐍃|f}}
 * Greek: {{t+|el|διχόνοια|f}}, {{t+|el|διχασμός|m}}
 * Hebrew: {{t+|he|מחלוקת|f|tr=makhlóket|alt=מַחְלֹקֶת}}
 * Irish: {{t|ga|deighilt|f}}
