/* Translations */ Added Gothic translation. <thing#59885881>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -180,6 +180,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Galician: {{t+|gl|cousa|f}}
 * Georgian: {{t|ka|ნივთი}}
 * German: {{t+|de|Ding|n}}, {{t+|de|Sache|f}}
+* Gothic: {{t|got|𐍅𐌰𐌹𐌷𐍄𐍃|f}}
 * Greek: {{t+|el|πράγμα|n}}
 * Guaraní: {{t+|gn|mba'e}}
 * Gujarati: {{t|gu|વસ્તુ}}
