--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -33,6 +33,7 @@
 
 ===Pronunciation===
 * {{es-IPA|estádounidénse}}
+* {{audio|es|LL-Q1321 (spa)-Millars-estadounidense.wav|Audio (Spain)}}
 
 ===Noun===
 {{es-noun|mf}}
@@ -59,7 +60,7 @@
 * {{l|es|norteamericano}}
 
 ===Further reading===
-* {{R:DRAE 2001}}
+* {{R:DRAE}}
 
 [[Category:es:Demonyms]]
 [[Category:es:Nationalities]]
