added [[Category:en:Foods]] using [[Help:Gadget-HotCat|HotCat]] <foo-foo#59901075>

--- a/en/f/foo-foo.855761.wikitext
+++ b/en/f/foo-foo.855761.wikitext
@@ -26,3 +26,5 @@ From West African languages such as [[Ewe]], {{m|ln|fufú|}} meaning 'white-whit
 
 ===References===
 * Frederic Gomes Cassidy and Robert Brock Le Page (editors), ''Dictionary of Jamaican English‎'', Second Edition, University of the West Indies Press (2002), [http://books.google.com/books?id=_lmFzFgsTZYC&pg=PA185&dq=foo-foo page 185].
+
+[[Category:en:Foods]]
