t+gl:[[apreixar]]([[WT:EDIT|Assisted]]) <seize#59912510>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -75,7 +75,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 * Esperanto: {{t+|eo|kapti}}
 * Finnish: {{t+|fi|tarttua}}
 * French: {{t+|fr|saisir}}, {{t+|fr|saisir|alt=se saisir de}}
-* Galician: {{t+|gl|agarrar}}
+* Galician: {{t+|gl|agarrar}}, {{t|gl|apreixar}}
 * German: {{t+|de|ergreifen}}, {{t+|de|fassen}}, {{t+|de|greifen}}
 * Gothic: {{t|got|𐌲𐍂𐌴𐌹𐍀𐌰𐌽}}
 * Greek:
