--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -41,7 +41,7 @@ From {{prefix|en|anarcho|capitalism}}. Coined by {{w|Murray Rothbard}} in the mi
 * Ido: {{t|io|anarkio-kapitalismo}}
 * Indonesian: {{t|id|anarko kapitalisme}}
 {{trans-mid}}
-* Italian: {{t+|it|anarcocapitalismo|m}}
+* Italian: {{t+|it|anarcocapitalismo|m}}, {{t+|it|anarco-capitalismo|m}}
 * Japanese: {{t|ja|無政府資本主義|sc=Jpan}}
 * Korean: {{t|ko|아나코 자본주의|sc=Kore}}
 * Latvian: {{t|lv|anarhokapitālisms|m}}
