--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -107,7 +107,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 {{rel-bottom}}
 
 =====Translations=====
-{{trans-top|To stake or pledge upon the outcome of an event}}
+{{trans-top|to stake or pledge upon the outcome of an event}}
 * Albanian: {{t-needed|sq}}
 * Arabic: {{t|ar|رَاهَنَ}}
 *: Egyptian Arabic: {{t|arz|راهن|tr=rāhin}}
@@ -159,7 +159,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Welsh: {{t-needed|cy}}
 {{trans-bottom}}
 
-{{trans-top|To be sure of something}}
+{{trans-top|to be sure of something}}
 * Bulgarian: {{t|bg|сигурен съм}}
 * Catalan: {{t+|ca|apostar}}
 * Czech: {{t|cs|vsadit|alt=vsadit se}}
@@ -175,7 +175,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Spanish: {{t+|es|apostar}}
 {{trans-bottom}}
 
-{{trans-top|To place money into the pot in poker}}
+{{trans-top|to place money into the pot in poker}}
 * Finnish: {{t+|fi|panostaa}}
 * Spanish: {{t+|es|apostar}}
 {{trans-mid}}
