--- a/en/q/quadrate.802550.wikitext
+++ b/en/q/quadrate.802550.wikitext
@@ -52,7 +52,7 @@ Borrowed from {{bor|en|fro|quadrat||a square}}, from {{der|en|la|quadrātus||squ
 #: '''''quadrating''' the circle''
 # {{lb|en|archaic|transitive}} To square; to agree; to suit; to correspond (with).
 #: ''not '''quadrating''' with American ideas of right, justice and reason''
-#* {{rfdatek|en|Burke}}
+#* {{RQ:Burke Reflections}}
 #*: The objections of these speculatists, if its forces do not '''quadrate''' with their theories, are as valid against such an old and beneficent government as against the most violent tyranny or the greenest usurpation.
 #* {{RQ:Fielding Tom Jones}}
 #*: In short I am resolved, from this instance, never to give way to the weakness of human nature more, nor to think anything virtue which doth not exactly '''quadrate''' with the unerring rule of right.
