--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -131,8 +131,8 @@ From {{inh|en|enm|cop}}, {{m|enm|coppe}}, from {{inh|en|ang|cop}}, {{m|ang|copp}
 
 # {{lb|en|crafts}} The ball of [[thread]] wound on to the spindle in a spinning machine.
 # {{lb|en|obsolete}} The [[top]], [[summit]], especially of a hill.
-#* {{rfdatek|en|Drayton}}
-#*: '''Cop''' they used to call / The tops of many hills.
+#* {{RQ:Drayton Poly-Olbion}}
+#*: '''Cop''' they use to call / The tops of many hills.
 # {{lb|en|obsolete}} The [[crown]] (of the head); also the [[head]] itself. {{defdate|14th-15th c.}}
 #: {{ux|en|The stature is bowed down in age, the '''cop''' is depressed.}}
 # A [[tube]] or [[quill]] upon which [[silk]] is wound.
