--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -23,7 +23,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 # {{lb|en|transitive}} To [[destroy]] completely.
 #: ''The building was '''consumed''' by fire.''
 #* {{RQ:Shakespeare Coriolanus|IV|vi|passage=If he were putting to my house the brand / That shall '''consume''' it.}}
-#* Bible, Matthew vi. 20
+#* {{RQ:KJV|Matthew|6|20}}
 #*: Lay up for yourselves treasures in heaven, where neither moth nor rust doth '''consume'''.
 # {{lb|en|intransitive|obsolete}} To [[waste away]] slowly.
 #* {{RQ:Shakespeare Much Ado|III|i|passage=Therefore, let Benedick, like cover'd fire, / '''Consume''' away in sighs.}}
