--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -75,14 +75,13 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #: ''to '''blow''' a horse''
 #: {{rfquotek|en|Sir Walter Scott}}
 # {{lb|en|obsolete}} {{rfv-sense|en}} To talk loudly; to boast; to storm.
+#* {{quote-journal|en|date=February 6, 1866|work=Virginia City Territorial Enterprise|title=Remarkable Dream|author=Mark Twain|volume=|number=|passage=I don't want the worst characters in hell to be running after me with friendly messages and little testimonials of admiration for Smythe, and '''blowing''' about his talents, and bragging on him, and belching their villainous fire and brimstone all through the atmosphere and making my place smell worse than a menagerie. }}
 #* {{rfdatek|en|Bartlett}}
 #*: You '''blow''' behind my back, but dare not say anything to my face.
 #* '''1969''', Charles Ambrose McCarthy, ''The Great Molly Maguire Hoax'' (page 113)
 #*: At the breaking edge with him and completely fed up with his everlasting bragging and '''blowing''' about his personal exploits, and desirous of putting him somewhere, anywhere, so they wouldn't be continuously annoyed by him, {{...}}
 #* '''1976''', David Toulmin, ''Blown Seed'' (page 148)
 #*: Audie never liked him because he was further in with old Craig than he was, bragging and '''blowing''' about his work and the things he could do, while Audie sat quiet as a mouse listening to his blab.
-#* '''1981''', Mark Twain, ‎Edgar Marquess Branch, ‎Robert Hirst, ''Early Tales & Sketches, Vol. 2: 1864-1865'' (page 358)
-#*: I don't want the worst characters in hell to be running after me with friendly messages and little testimonials of admiration for Smythe, and '''blowing''' about his talents, and bragging on him, and belching their villainous fire and brimstone {{...}}
 # {{lb|en|slang|informal|AAVE}} To [[sing]]
 #: ''That girl has a wonderful voice; just listen to her '''blow'''!''
 # {{lb|en|Scientology|intransitive}} To [[leave]] the [[Church of Scientology]] in an unauthorized manner.
