--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -28,6 +28,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 |title=[http://www.guardian.co.uk/society/2011/dec/16/hospital-staff-dementia-patients Hospital staff 'lack skills to cope with dementia patients']
 |passage=Most '''staff''' do not have the skills to cope with such challenging patients, who too often receive "impersonal" care and suffer from boredom, the first National Audit of Dementia found. It says hospitals should introduce "dementia champions".}}
 #: {{ux|en|The company employed 10 new members of '''staff''' this month.}}
+#: {{ux|en|The company has taken on 1600 more highly-paid '''staff'''.}}
 # {{lb|en|uncountable}} A mixture of [[plaster]] and [[fibre]] used as a temporary exterior wall covering.<sup>[[w:Staff (building material)|W]]</sup>
 # A pole, stick, or wand borne as an ensign of authority; a badge of office.
 #: {{ux|en|a constable's '''staff'''}}
