--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -32,7 +32,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 # {{lb|en|intransitive|usually|with "down"}} To [[stoop]].
 #: ''He '''bent''' down to pick up the pieces.''
 # {{lb|en|intransitive}} To [[bow]] in prayer, or in token of submission.
-#* {{rfdatek|en|Samuel Taylor Coleridge}}
+#* {{RQ:Coleridge Ancient Mariner}}
 #*: Each to his great Father '''bends'''.
 # {{lb|en|transitive}} To force to submit. <!--accomplishment,achievement-->
 #: ''They '''bent''' me to their will.''
