--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -34,6 +34,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Arabic: {{t|ar|قَرْنَبِيط|m}}, {{t|ar|قُنَّبِيط|m}}
 *: Egyptian Arabic: {{t|arz|قرنبيط|m-p|tr=ʾarnabīṭ}}
 *: Hijazi Arabic: {{t|acw|قرنبيط|m-p|tr=garnabīṭ}}
+* Aragonese: {{t+|an|pella|f}}
 * Armenian: {{t+|hy|ծաղկակաղամբ}}
 * Basque: {{t|eu|azalore}}
 * Bulgarian: {{t+|bg|карнабит|m}}, {{t|bg|карфиол|m}}
