--- a/en/i/individualize.742107.wikitext
+++ b/en/i/individualize.742107.wikitext
@@ -18,7 +18,7 @@
 * German: {{t+|de|individualisieren}}
 {{trans-bottom}}
 
-{{trans-top|to modify soemthing to suit an individual}}
+{{trans-top|to modify something to suit an individual}}
 * Finnish: {{t+|fi|yksilöllistää}}
 {{trans-mid}}
 {{trans-bottom}}
