--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -14,7 +14,7 @@ From {{m|en|public}} (originally, "[[communal]]" and contrasted with [[personal]
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|UK|Ireland}} Certain [[private school]]s, [[particularly]] {{qualifier|initially}} any [[grammar school]] [[operate]]d apart from the [[personal]] [[land]]s of its [[student]]s or {{qualifier|from the 19th century}} the [[fee]]-[[pay]]ing [[secondary school]]s which [[develop]]ed from or were [[model]]led upon them; a [[British]] [[boarding school]]
+# {{lb|en|UK|Ireland}} Certain [[private school]]s, [[particularly]] {{qualifier|initially}} any [[grammar school]] [[operate]]d apart from the [[personal]] [[land]]s of its [[student]]s or {{qualifier|from the 19th century}} the [[fee-paying]] [[secondary school]]s which [[develop]]ed from or were [[model]]led upon them; a [[British]] [[boarding school]]
 #* '''1580''' June 18, Letters of the Privy Council in John Strype's ''History of Edmund Grindal'' (1710), ii.xi.254
 #*: All such School-masters as have charge of Children and do instruct them either in '''Publick Schools''', or Private Houses.
 #* '''1604''', Acts of Parliament 1 under James I, c.4, §8
