--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -30,6 +30,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 #*: "You surely are a man of some '''weight''' around here," I said.
 # {{lb|en|weightlifting}} An object, such as a [[weight plate]] or [[barbell]], used for [[strength training]].
 #: {{ux|en|He's working out with '''weights'''.}}
+# {{lb|en|lubricants}} [[viscosity]] rating.
 # {{lb|en|physics}} [[mass|Mass]] ([[atomic weight]], [[molecular weight]], etc.) {{qualifier|in restricted circumstances}}
 # {{lb|en|physics|proscribed}} {{synonym of|en|mass}} {{qualifier|in general circumstances}}
 # {{lb|en|measurement}} [[mass|Mass]] ([[net weight]], [[troy weight]], [[carat weight]], etc.).
