--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -85,22 +85,22 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 
 =====Translations=====
 {{trans-top|mammal of genus ''Sus''}}
-* Abau: {{t|aau|huok}}
-* Abenaki: {{t|abe|piks}}
+* Abau: {{t-simple|aau|langname=Abau|huok}}
+* Abenaki: {{t-simple|abe|langname=Abenaki|piks}}
 * Abkhaz: {{t|ab|аҳәа}}
-* Abu' Arapesh: {{t|aah|bul}}
-* Acehnese: {{t|ace|bui}}
+* Abu' Arapesh: {{t-simple|aah|langname=Abu' Arapesh|bul}}
+* Acehnese: {{t-simple|ace|langname=Acehnese|bui}}
 * Adyghe: {{t|ady|къо}}, {{t|ady|хъо}}
-* Afrikaans: {{t+|af|vark}}
-* Agarabi: {{t|agd|pon}}
-* Albanian: {{t+|sq|derr|m}}, {{t+|sq|thi|m}}
-* Ama: {{t|amm|fu}}
-* Amanab: {{t|amn|tata}}
+* Afrikaans: {{t-simple|interwiki=1|af|langname=Afrikaans|vark}}
+* Agarabi: {{t-simple|agd|langname=Agarabi|pon}}
+* Albanian: {{t-simple|interwiki=1|sq|langname=Albanian|derr|g=m}}, {{t-simple|interwiki=1|sq|langname=Albanian|thi|g=m}}
+* Ama: {{t-simple|amm|langname=Ama|fu}}
+* Amanab: {{t-simple|amn|langname=Amanab|tata}}
 * Amharic: {{t+|am|አሳማ}}
-* Aneme Wake: {{t|aby|boro}}
-* Ansus: {{t|and|tapui}}
+* Aneme Wake: {{t-simple|aby|langname=Aneme Wake|boro}}
+* Ansus: {{t-simple|and|langname=Ansus|tapui}}
 * Apache:
-*: Western Apache: {{t|apw|góchiʼ}}
+*: Western Apache: {{t-simple|apw|langname=Western Apache|góchiʼ}}
 * Arabic: {{t|ar|خِنْزِير|m}}, {{t|ar|حَلُوف|m}}
 *: Egyptian Arabic: {{t|arz|خنزير|m|tr=ḵanzīr}}, {{t|arz|حلوف|m|tr=ḥalūf}}
 *: Gulf Arabic: {{t|afb|خنزير|m|tr=ḵanzīr}}
@@ -110,12 +110,12 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 *: Hebrew: {{t|arc|חזירא|tr=ħzīrā’|m}}, {{t|arc|חזירתא|tr=ħzīrtā’|f}}
 *: Syriac: {{t|arc|ܚܙܝܪܐ|tr=ħzīrā’|m}}, {{t|arc|ܚܙܝܪܬܐ|tr=ħzīrtā’|f}}
 * Armenian: {{t+|hy|խոզ}}
-* Aromanian: {{t|rup|porcu|m}}
+* Aromanian: {{t-simple|rup|porcu|langname=Aromanian|g=m}}
 * Assamese: {{t|as|গাহৰি}}
-* Asturian: {{t+|ast|gochu|m}}, {{t+|ast|gocha|f}}
-* Atayal: {{t|tay|bzyok}}
+* Asturian: {{t-simple|interwiki=1|ast|langname=Asturian|gochu|m}}, {{t-simple|interwiki=1|ast|langname=Asturian|gocha|f}}
+* Atayal: {{t-simple|tay|langname=Atayal|bzyok}}
 * Avar: {{t|av|болъон}}
-* Azerbaijani: {{t+|az|donuz}}
+* Azerbaijani: {{t-simple|interwiki=1|az|langname=Azerbaijani|donuz}}
 * Bahnar: {{t|bdq|nhŭng}}
 * Balinese: {{t|ban|celeng}}
 * Bashkir: {{t|ba|сусҡа}}
@@ -378,7 +378,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 {{trans-see|pork}}
 
 {{trans-top|someone who overeats or eats rapidly}}
-* Afrikaans: {{t+|af|vark}}
+* Afrikaans: {{t-simple|interwiki=1|af|langname=Afrikaans|vark}}
 * Armenian: {{t+|hy|խոզ}}, {{t+|hy|կաշալոտ}}
 * Catalan: {{t+|ca|golafre|m}}
 * Dutch: {{t+|nl|varken|n}}, {{t+|nl|zwijn|n}}, {{t+|nl|slokop|m|f}}
@@ -407,7 +407,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 {{trans-bottom}}
 
 {{trans-top|nasty or disgusting person}}
-* Afrikaans: {{t+|af|vark}}
+* Afrikaans: {{t-simple|interwiki=1|af|langname=Afrikaans|vark}}
 * Armenian: {{t+|hy|խոզ}}
 * Czech: {{t+|cs|prase|n}}
 * Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|smeerlap|m}}
@@ -436,7 +436,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 {{trans-bottom}}
 
 {{trans-top|dirty or slovenly person}}
-* Afrikaans: {{t+|af|vark}}
+* Afrikaans: {{t-simple|interwiki=1|af|langname=Afrikaans|vark}}
 * Armenian: {{t+|hy|խոզ}}
 * Czech: {{t+|cs|prase|n}}, {{t+|cs|čuně|n}}
 * Dutch: {{t+|nl|varken|n}}
