t+fr:[[marche aléatoire]] ([[WT:EDIT|Assisted]]) <random walk#60074257>

--- a/en/r/random walk.801871.wikitext
+++ b/en/r/random walk.801871.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 {{trans-top|stochastic path}}
 * Finnish: {{t|fi|satunnaiskulku}}
+* French: {{t|fr|marche aléatoire|f}}
 * German: {{t+|de|Irrfahrt}}, {{t|de|Zufallsbewegung}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|véletlen bolyongás}}
