--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -116,6 +116,9 @@ Various alternative etymologies have also been proposed:
 ===Etymology 2===
 {{zh-see|肉|v}}
 
+===Etymology 3===
+{{zh-see|明|a}}
+
 ===References===
 * {{R:yue:Hanzi}}
 * {{R:twedu|A01841}}
