--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -22,8 +22,8 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 #* '''1998''', ''District of Columbia Appropriations for 1998: Hearings''
 #*: Later that day, the unit was staffed with only one officer, who was required to stay in the '''bubble'''.
 # {{lb|en|obsolete}} Someone who has been ‘bubbled’ or [[fooled]]; a [[dupe]].
-#* {{rfdatek|en|Prior}}
-#*: Granny's a cheat, and I'm a '''bubble'''.
+#* {{RQ:Prior Cupid and Ganymede}}
+#*: Gany's a cheat, and I'm a '''bubble'''.
 #* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1979, p. 15:
 #*: For no woman, sure, will plead the passion of love for an excuse. This would be to own herself the mere tool and '''bubble''' of the man.
 # {{lb|en|figurative}} The emotional and/or physical atmosphere in which the subject is immersed.
