--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -649,11 +649,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blōwan}}, from {{inh|en|gem-pro|*
 [[Category:English basic words]]
 [[Category:English class 7 strong verbs]]
 [[Category:English irregular verbs]]
-[[Category:en:Colors]]
-[[Category:en:Marijuana]]
-[[Category:en:Recreational drugs]]
-[[Category:en:Singing]]
-[[Category:en:Wind]]
+{{c|en|Colors|Marijuana|Recreational drugs|Singing|Wind}}
 
 ----
 
