--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -649,7 +649,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blōwan}}, from {{inh|en|gem-pro|*
 [[Category:English basic words]]
 [[Category:English class 7 strong verbs]]
 [[Category:English irregular verbs]]
-{{c|en|Colors|Marijuana|Recreational drugs|Singing|Wind}}
+{{c|en|Colors|Flowers|Marijuana|Recreational drugs|Singing|Violence|Wind}}
 
 ----
 
