--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -430,6 +430,6 @@ From {{inh|da|non|biti|g=m}}, from {{inh|da|gem-pro|*bitô}}, cognate with {{cog
 {{za-head|noun|saw=[[䖩]], [[⿰虫畢]]}}
 
 # [[cicada]]
-# {{syn|za|biqrengh|q1=dialectal|nengzceq|q2=dialectal}}
+#: {{syn|za|biqrengh|q1=dialectal|nengzceq|q2=dialectal}}
 
 {{C|za|Insects}}
