t+be:[[цвятная капуста]] t-balance t+tg:[[гулкарам]] t+szl:[[blumkola]] ([[WT:EDIT|Assisted]]) <cauliflower#60096274>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -37,6 +37,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Aragonese: {{t+|an|pella|f}}
 * Armenian: {{t+|hy|ծաղկակաղամբ}}
 * Basque: {{t|eu|azalore}}
+* Belarusian: {{t|be|цвятна́я капу́ста|f}}
 * Bulgarian: {{t+|bg|карнабит|m}}, {{t|bg|карфиол|m}}
 * Burmese: {{t+|my|ဂေါ်ဖီပန်း|sc=Mymr}}, {{t+|my|ပန်းမုန်လာ}}, {{t+|my|ပန်းဂေါ်ဖီ}}
 * Catalan: {{t+|ca|coliflor|f}}, {{t|ca|bròquil blanc|m}}
@@ -91,6 +92,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Romansch: {{t|rm|cardifiol|m}}
 * Russian: {{t+|ru|цветна́я капу́ста|f}}
 * Serbo-Croatian: {{t+|sh|karfiol|m}}, {{t+|sh|cvjetača|f}}, {{t|sh|cvetača|f}}, {{t|sh|цвeтача|f}}
+* Silesian: {{t|szl|blumkola|f}}
 * Slovak: {{t|sk|karfiol|m}}
 * Slovene: {{t+|sl|cvetača|f}}
 * Sotho: {{t|st|kholifolawa}}
@@ -98,6 +100,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Swahili: {{t|sw|koliflawa}}
 * Swedish: {{t+|sv|blomkål|c}}
 * Tagalog: {{t|tl|koliplor}}
+* Tajik: {{t|tg|гулкарам}}
 * Thai: {{t|th|กะหล่ำดอก}}, {{t|th|กะหล่ำต้น}}
 * Turkish: {{t+|tr|karnabahar}}
 * Urdu: {{t|ur|گوبی|tr=gobī}}, {{t|ur|گوبھی|tr=gobhī}}
@@ -113,6 +116,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Arabic: {{t|ar|قَرْنَبِيط|m}}, {{t|ar|قُنَّبِيط|m}}
 *: Egyptian Arabic: {{t|arz|قرنبيطة|f|tr=ʔarnabiṭa|sc=Arab}}, {{t|arz|قرنبيط|m-p|tr=ʔarnabiiṭ}}
 * Basque: {{t|eu|azalore}}
+* Belarusian: {{t|be|цвятна́я капу́ста|f}}
 * Catalan: {{t+|ca|coliflor|f}}
 * Czech: {{t+|cs|květák|m}}, {{t|cs|karfiól|m}}
 * Danish: {{t+|da|blomkål|c}}
@@ -134,8 +138,8 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Latvian: {{t|lv|ziedkāposts|m}}, {{t|lv|puķkāposts|m}}
 * Lithuanian: {{t|lt|žiedinis kopūstas|m}}
 * Luxembourgish: {{t|lb|Choufleur|m}}
-{{trans-mid}}
 * Maltese: {{t|mt|pastard}}
+{{trans-mid}}
 * Navajo: {{t|nv|chʼil łigaii}}
 * Nepali: {{t+|ne|गोभी}}, {{t+|ne|कोपी२}}, {{t+|ne|काउली१}}
 * Northern Sami: {{t|se|diehppegálla}}
@@ -149,6 +153,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Romansch: {{t|rm|cardifiol|m}}
 * Russian: {{t+|ru|цветная капуста|f}}
 * Serbo-Croatian: {{t|sh|карфиол|m}}
+* Silesian: {{t|szl|blumkola|f}}
 * Slovak: {{t|sk|karfiol|m}}
 * Slovene: {{t+|sl|cvetača|f}}
 * Sorbian:
@@ -157,6 +162,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Swahili: {{t|sw|mkoliflawa}}
 * Swedish: {{t+|sv|blomkål|c}}
 * Tagalog: {{t|tl|koliplor}}
+* Tajik: {{t|tg|гулкарам}}
 * Turkish: {{t+|tr|karnabahar}}
 * Urdu: {{t|ur|گوبی|tr=gobī}}, {{t|ur|گوبھی|tr=gobhī}}
 * Ukrainian: {{t|uk|кучеря́ва капу́ста|f|sc=Cyrl}}, {{t|uk|цвітна́ капу́ста|f|sc=Cyrl}}, {{t|uk|капуста цвітна|f}}
