--- a/en/w/widebodied.856004.wikitext
+++ b/en/w/widebodied.856004.wikitext
@@ -8,7 +8,7 @@
 {{en-adj}}
 
 # {{lb|en|aeronautics}} An [[airliner]] that can seat more than six passengers in each row, in [[economy]] seating.
-#: '''''Widebodied''' jets, like the 747, the DC-10, and the L-1011, introduced the possibility of low-cost air travel.
+#: '''''Widebodied''' jets, like the 747, the DC-10, and the L-1011, introduced the possibility of low-cost air travel.''
 
 ====Translations====
 {{trans-top|An airliner that can seat more than six passengers in each row, in economy seating.}}
