--- a/en/p/pinot.745862.wikitext
+++ b/en/p/pinot.745862.wikitext
@@ -5,7 +5,7 @@
 Borrowed from {{bor|en|fr|pinot}}, a type of vine, from earlier {{m|fr|pineau}}.
 
 ===Pronunciation===
-* {{a|US}} {{IPA|en|/ˈpiːnoʊ|ˈpinoʊ/}}
+* {{a|US}} {{IPA|en|/ˈpiːnoʊ|/ˈpinoʊ/}}
 * {{rhymes|en|iːnəʊ}}
 
 ===Noun===
