--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -17,8 +17,8 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 #* {{RQ:Shakespeare As You Like It|III|ii|passage=They that reap must sheaf and '''bind'''.}}
 # {{lb|en|intransitive}} To cohere or stick together in a mass.
 #: {{ux|en|Just to make the cheese more '''binding'''}}
-#* {{rfdatek|en|Mortimer}}
-#*: clay '''binds''' by heat.
+#* {{RQ:Mortimer Husbandry}}
+#*: unlocks their [clay's] '''binding''' Quality.
 # {{lb|en|intransitive}} To be restrained from motion, or from customary or natural action, as by friction.
 #: {{ux|en|I wish I knew why the sewing machine '''binds''' up after I use it for a while.}}
 # {{lb|en|intransitive}} To exert a binding or restraining influence.
