t+ko:[[노네인]] ([[WT:EDIT|Assisted]]) <nonane#60144821>

--- a/en/n/nonane.775490.wikitext
+++ b/en/n/nonane.775490.wikitext
@@ -15,6 +15,7 @@
 * German: {{t+|de|Nonan|n}}
 * Italian: {{t+|it|nonano|m}}
 {{trans-mid}}
+* Korean: {{t|ko|노네인}}
 * Norwegian: {{t|no|nonan|n}}
 * Turkish: {{t|tr|nonan}}
 {{trans-bottom}}
