--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -405,3 +405,4 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 [[Category:English basic words]]
 [[Category:English words not following the I before E except after C rule]]
 [[Category:en:Mechanics]]
+{{C|en|Size}}
