t+cy:[[help llaw]] t-balance ([[WT:EDIT|Assisted]]) <helping hand#60149384>

--- a/en/h/helping hand.803463.wikitext
+++ b/en/h/helping hand.803463.wikitext
@@ -15,9 +15,10 @@
 * Finnish: {{t|fi|auttava käsi}}, {{t|fi|kolmas käsi}} {{qualifier|tool}}
 * French: {{t+|fr|coup de pouce|m}}, {{t+|fr|coup de main|m}}
 * Hungarian: {{t|hu|segítő kéz}}
-{{trans-mid}}
 * Icelandic: {{t+|is|hjálparhönd|f}}, {{qualifier|lend a helping hand}} {{t|is|rétta hjálparhönd}}, {{qualifier|give a helping hand}} {{t|is|leggja hönd á plóg}}, {{t|is|leggja hönd á plóg}}
+{{trans-mid}}
 * Irish: {{t|ga|lámh chuidithe|f}}, {{t|ga|lámh chúnta|f}}
 * Polish: {{t|pl| pomocna dłoń|f}}
 * Swedish: {{t+|sv|handtag|n}}, {{t|sv|hjälpande hand|c}}
+* Welsh: {{t|cy|help llaw|m}}
 {{trans-bottom}}
