--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -218,7 +218,7 @@ Corruption of {{m|en|annotto}}.
 
 ===Etymology===
 {{PIE root|nl|wed}}
-From {{inh|nl|dum|otter}}, from {{inh|nl|odt|*ottar}}, from {{inh|nl|gem-pro|*utraz}}, from {{inh|nl|ine-pro|*udrós||water-animal, otter}}, from {{m|ine-pro|*wed-||water}}.
+From {{inh|nl|dum|otter}}, from {{inh|nl|odt|*ottar}}, from {{inh|nl|gmw-pro|*ot(t)r}}, from {{inh|nl|gem-pro|*utraz}}, from {{inh|nl|ine-pro|*udrós||water-animal, otter}}, from {{m|ine-pro|*wed-||water}}.
 
 ===Pronunciation===
 * {{IPA|nl|/ˈɔ.tər/}}
