--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -188,6 +188,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 # An incident of bleeding, as in [[haemophilia]].
 # {{lb|en|printing}} A narrow edge around a page layout, to be printed but cut off afterwards (added to allow for slight misalignment, especially with pictures that should run to the edge of the finished sheet).
 # {{lb|en|sound recording}} The situation where sound is picked up by a [[microphone]] from a source other than that which is intended.
+# The removal of air bubbles from a pipe containing other fluids.
 
 ====Translations====
 {{trans-top|incident of bleeding}}
