--- a/en/p/pariente.4512.wikitext
+++ b/en/p/pariente.4512.wikitext
@@ -57,3 +57,4 @@ From {{inh|es|osp|pariente}}, from {{inh|es|la|parentem}}, accusative singular o
 
 [[Category:Spanish 3-syllable words]]
 [[Category:es:Family]]
+{{C|es|Family members}}
