t+pam:[[agyang]] t+pam:[[andyang]] t+tl:[[kahit]] t-balance ([[WT:EDIT|Assisted]]) <even so#60176266>

--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -36,14 +36,16 @@
 * Finnish: {{t|fi|siitä huolimatta}}
 * French: {{t+|fr|quand même}}
 * Greek: {{t|el|εντούτιος}}
-{{trans-mid}}
 * Hebrew: {{t|he|בְּכָל זֹאת|tr=bekhol zot|sc=Hebr}}
+{{trans-mid}}
 * Irish: {{t|ga|mar sin féin}}
 * Italian: {{t+|it|tuttavia}}, {{t+|it|ciononostante}}
+* Kapampangan: {{t|pam|agyang}}, {{t|pam|andyang}}
 * Portuguese: {{t+|pt|ainda assim}}, {{t|pt|mesmo assim}}
 * Russian: {{t|ru|несмотря́ на э́то}}
 * Spanish: {{t+|es|aún así}}
 * Swedish: {{t+|sv|likväl}}, {{t+|sv|ändå}}, {{t+|sv|i alla fall}}, {{t|sv|trots det}}
+* Tagalog: {{t+|tl|kahit}}
 {{trans-bottom}}
 
 ===Anagrams===
