--- a/en/n/NSA.26206.wikitext
+++ b/en/n/NSA.26206.wikitext
@@ -5,7 +5,7 @@
 {{en-adv|-}}
 
 # {{initialism of|en|no strings attached}}
-# {{initialism of|en|no [[sugar]] [[add]]ed}}
+# {{initialism of|en|[[no]] [[sugar]] [[add]]ed}}
 
 ===Adjective===
 {{en-adj|-}}
