t+kw:[[kowlleski]] ([[WT:EDIT|Assisted]]) <consume#60192918>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -129,6 +129,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 * Bulgarian: {{t+|bg|поглъщам}}
 * Chinese:
 *: Mandarin: {{t+|cmn|摧毀}}, {{t+|cmn|摧毁|tr=cuīhuǐ}}, {{t+|cmn|吞噬|tr=tūnshì}}
+* Cornish: {{t|kw|kowlleski}} {{qualifier|by fire}}
 * Dutch: {{t+|nl|verteren}}, {{t+|nl|consumeren}}
 * Finnish: {{t+|fi|tuhota}}, {{t+|fi|tuhoutua}}
 * French: {{t+|fr|consumer}}
