t+cmn:[[環境科學]] t+cmn:[[环境科学]] t-balance ([[WT:EDIT|Assisted]]) <environmental science#60204707>

--- a/en/e/environmental science.855254.wikitext
+++ b/en/e/environmental science.855254.wikitext
@@ -11,8 +11,10 @@
 
 ====Translations====
 {{trans-top|integrated study of environment}}
-* Finnish: {{t+|fi|ympäristötiede}}
+* Chinese:
+*: Mandarin: {{t|cmn|環境科學}}, {{t|cmn|环境科学|tr=huánjìng kēxué}}
 {{trans-mid}}
+* Finnish: {{t+|fi|ympäristötiede}}
 * Turkish: {{t+|tr|çevre bilimi}}
 {{trans-bottom}}
 
