/* Norwegian Nynorsk */ <proforma#60207753>

--- a/en/p/proforma.774476.wikitext
+++ b/en/p/proforma.774476.wikitext
@@ -38,7 +38,7 @@
 ==Norwegian Nynorsk==
 
 ===Etymology===
-From {{bor|nn|la|pro forma}}.
+From {{bor|nn|la|prō fōrmā}}.
 
 ===Adjective===
 {{head|nn|adjective|cat2=adverbs}}
