t+cic:[[ano̠wa']] ([[WT:EDIT|Assisted]]) <again#60213833>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -82,6 +82,7 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}},{{m|enm|ayain}}, {{m|enm|ayen}}, {{m|
 ====Translations====
 {{trans-top|back to a former place or state}}
 * Bashkir: {{t|ba|кире}}
+* Chickasaw: {{t|cic|ano̠wa'}}
 * Dutch: {{t+|nl|weer}}, {{t+|nl|weder}}
 * Finnish: {{t+|fi|jälleen}}, {{t+|fi|uudestaan}}, {{t|fi|ennalleen}}
 * German: {{t+|de|wieder}}, {{t+|de|zurück}}
