/* Italian */ +etyl, pron, der, rel, f r <confessione#60231173>

--- a/en/c/confessione.776332.wikitext
+++ b/en/c/confessione.776332.wikitext
@@ -9,7 +9,11 @@
 
 ==Italian==
 
+===Etymology===
+From {{der|it|la|cōnfessiō}}.
+
 ===Pronunciation===
+* {{it-IPA}}
 * {{audio|it|It-confessione.ogg|audio}}
 
 ===Noun===
@@ -17,6 +21,15 @@
 
 # [[confession]]
 # [[denomination]], [[creed]]
+
+====Derived terms====
+* {{l|it|confessionale}}
+
+====Related terms====
+* {{l|it|confessare}}
+
+===Further reading===
+* {{R:it:Treccani}}
 
 ----
 
