t+es:[[cua]] ([[WT:EDIT|Assisted]]) <quack#60236781>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -45,7 +45,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Portuguese: {{t|pt|quac|m}}
 * Romanian: {{t+|ro|mac|?}}, {{t|ro|mac-mac|?}}, {{t+|ro|măcăit|n}}, {{t+|ro|măcănit|n}}, {{t+|ro|măcăitură|f}}
 * Russian: {{t|ru|кря-кря|?}}, {{t+|ru|кря́канье|n}}
-* Spanish: {{t+|es|cuac|m}}
+* Spanish: {{t+|es|cuac|m}}, {{t+|es|cua|m}}
 * Swedish: {{t+|sv|kvack|n}}
 * Tagalog: {{t|tl|kwak-kwak}}
 * Thai: {{t+|th|ก้าบ}}
