<four score and seven years ago#60241710>

--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -11,4 +11,4 @@ In Abraham Lincoln's Gettysburg Address, he used this (at the time) widely known
 {{head|en|adverb}}
 
 # {{lb|en|idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly important.
-# {{rfquote|en}}
+{{rfquote|en}}
