--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -5,6 +5,9 @@
 ===Etymology===
 From {{etyl|grc|en}} {{m|grc|Ἰωνία}}.
 
+===Pronunciation===
+{{rfp|en}}
+
 ===Proper noun===
 {{en-proper noun}}
 
