--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -6,7 +6,7 @@
 From {{etyl|grc|en}} {{m|grc|Ἰωνία}}.
 
 ===Pronunciation===
-{{rfp|en}}
+* {{IPA|en|/aɪˈəʊni.ə/|/aɪˈəʊnjə/}}
 
 ===Proper noun===
 {{en-proper noun}}
