--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -51,7 +51,7 @@ From {{etyl|grc|en}} {{m|grc|Ἰωνία}}.
 From the {{der|la|grc|Ἰωνία}}.
 
 ===Pronunciation===
-* {{la-IPA|I.ōnia}}
+* {{la-IPA|Ĭōnia}}
 
 ===Proper noun===
 {{la-proper noun|Iōnia<1.loc>}}
