t:etyl cleanup <Balkans#60284957>

--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-Of {{etyl|trk|en}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
+Of {{der|en|trk|-}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ˈbɔːl.kənz/|/ˈbɒl.kənz/}}
