--- a/en/b/barbera.745859.wikitext
+++ b/en/b/barbera.745859.wikitext
@@ -2,12 +2,12 @@
 ==English==
 
 ===Etymology===
-From {{etyl|it|en}} {{m|it|barbera}}
+From {{bor|en|it|barbera}}.
 
 ===Noun===
 {{en-noun|-}}
 
-# An Italian grape variety grown for use in [[red wine]], or a wine made from such grapes
+# An Italian grape variety grown for use in [[red wine]], or a wine made from such grapes.
 #* {{quote-journal|en|date=May 9, 2003|author=Laura Levy Shatkin|title=Wine and Dine|work=Chicago Reader|url=https://securesite.chireader.com/cgi-bin/Archive/abridged2.bat?path=2003/030509/RESTBOX
 |passage=This '''barbera''' grape, one of the predominant varieties in Italy's northwest Piemonte region, is grown in the town of Alba.}}
 #* {{quote-journal|en|date=May 30, 2007|author=Florence Fabricant|title=An Earthy Mushroom Pasta Sauce With Piquant Cheese for an Earthy, Truffly Wine|work=New York Times|url=http://www.nytimes.com/2007/05/30/dining/30pair.html
@@ -36,6 +36,9 @@ From {{etyl|it|en}} {{m|it|barbera}}
 ----
 
 ==Italian==
+
+===Etymology===
+{{rfe|it}}
 
 ===Noun===
 {{it-noun|m|-}}
