/* Translations */ Added Tocharian B translation. <rot#60294202>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -103,6 +103,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Tajik: {{t|tg|вайрон шудан}}, {{t|tg|пӯсидан}}
 * Thai: {{t+|th|ผุ}}
 * Tibetan: {{t|bo|རུལ}}
+* Tocharian B: {{t|txb|āmp-}}
 * Turkish: {{t+|tr|çürümek}}
 * Ukrainian: {{t|uk|гни́ти|impf|sc=Cyrl}}
 * Uzbek: {{t+|uz|chirimoq}}
