/* Translations */ Added Tocharian B translation. <consume#60294282>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -109,6 +109,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 * Slovene: {{t|sl|uživati|impf}}, {{t|sl|užiti|pf}}
 * Spanish: {{t+|es|consumir}}
 * Thai: {{t+|th|บริโภค}}, {{t+|th|กิน}}
+* Tocharian B: {{t|txb|śu-}}
 * Turkish: {{t+|tr|yemek}}, {{t+|tr|tüketmek}}
 * Vietnamese: {{t+|vi|ăn}}
 {{trans-bottom}}
