--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -31,7 +31,7 @@
 * Japanese: {{t-needed|ja}}
 * Korean: {{t-needed|ko}}
 * Polish: {{t-needed|pl}}
-* Portuguese: {{t-needed|pt}}
+* Portuguese: {{t+|pt|CD-ROM|m}}
 * Romanian: {{t|ro|CD-ROM}}
 * Russian: {{t-needed|ru}}
 * Spanish: {{t|es|cederrón|m}}
