--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -22,8 +22,8 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #* {{quote-book|en|year=1918| author={{w|W. B. Maxwell}}| chapter=15| title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]| passage=Edward Churchill still '''attended''' to his work in a hopeless mechanical manner like a sleep-walker who walks safely on a well-known round. But his Roman collar galled him, his cossack stifled him, his biretta was as uncomfortable as a merry-andrew's cap and bells.}}
 # {{lb|en|ambitransitive}} To [[wait upon]] as a [[servant]] etc.; to accompany to assist (someone). {{defdate|from 15th c.}}
 #: {{ux|en|Valets '''attend''' to their employer's wardrobe.}}
-#* {{rfdatek|en|Edmund Spenser}}
-#*: The fifth had charge sick persons to '''attend'''.
+#* {{RQ:Spenser FQ|1|10|stanza=41}}
+#*: The fift had charge sicke persons to '''attend'''
 #*{{RQ:Shakespeare Verona|I|iii|passage=youthful Valentine<br>'''Attends''' the emperor in his royal court.}}
 #* {{RQ:Macaulay History|13|With a sore heart and a gloomy brow, he prepared to '''attend''' William thither.}}
 # {{senseid|en|to be present at}}{{lb|en|transitive}} To be [[present]] at (an event or place) in order to take part in some action or proceedings; to regularly go to (an event or place). {{defdate|from 17th c.}}
