--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -78,7 +78,7 @@ When '''bade''' or '''bad''' is used in formal speech the pronunciation {{IPAcha
 * Finnish: {{t+|fi|toivottaa}}
 {{trans-mid}}
 * French: {{t+|fr|dire}}, {{t+|fr|exprimer}}
-* Hungarian: {{t+|hu|mond}}, {{t+|hu|vesz}}
+* Hungarian: {{q|with {{m|hu|búcsú||farewell}}}} {{t+|hu|mond}}, {{t+|hu|vesz}}
 * Occitan: {{t+|oc|dire}}
 {{trans-bottom}}
 
