--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -114,7 +114,7 @@ From {{der|en|enm|beden}}, from the {{der|en|ang|-}} verb {{m|ang|bēodan||offer
 * French: {{t|fr|faire une enchère}} (at auction)
 * Galician: {{t|gl|oferer}}, {{t|gl|oferecer}}, {{t+|gl|ofrecer}}, {{t|gl|ofrir}}, {{t|gl|gravecer}}, {{t|gl|brindar}}, {{t|gl|obradar}}, {{t|gl|poxar}}
 * German: {{t+|de|bieten}}
-* Hungarian: {{t+|hu|licitál}}, {{t|hu|ajánlatot tesz}}
+* Hungarian: {{t+|hu|licitál}}, {{t|hu|[[ajánlatot]] [[tesz]]}}
 * Italian: {{t|it|fare un'offerta per un'asta}}
 {{trans-mid}}
 * Japanese: {{t|ja|[[値]][[を]][[つける]]|tr=ねをつける, ne o tsukeru}}, {{t|ja|入札|tr=にゅうさつする, nyūsatsu suru|alt=入札する}}
