/* Noun */ quote <waterproofness#60344071>

--- a/en/w/waterproofness.855382.wikitext
+++ b/en/w/waterproofness.855382.wikitext
@@ -7,6 +7,7 @@
 {{en-noun|-}}
 
 # The property of being [[waterproof]].
+#* {{quote-journal|en|year=1961|month=February|title=Talking of Trains: New L.T. research laboratory|journal=Trains Illustrated|page=77|text=In the fabric section, a textile twisting and tearing machine and a "Lissajou curve" [sic] abrader (covering a complete area in overlapping curves) are supplemented by apparatus for evaluating '''waterproofness''', fibre diameter and light-fastness.}}
 
 ===References===
 * {{R:Lexico}}
