/* Translations */ Added Tocharian B translation. <again#60347240>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -210,6 +210,7 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}},{{m|enm|ayain}}, {{m|enm|ayen}}, {{m|
 * Tatar: {{t|tt|кабаттан}}
 * Telugu: {{t+|te|మళ్లీ}}, {{t|te|మరలా}}
 * Thai: {{t+|th|อีก}}, {{t+|th|ใหม่}}
+* Tocharian B: {{t|txb|nano}}
 * Tok Pisin: {{t|tpi|gen}}
 * Turkish: {{t+|tr|yeniden}}, {{t+|tr|tekrar}}, {{t+|tr|gene}}, {{t+|tr|yine}}, {{t+|tr|bir daha}}
 * Turkmen: {{t|tk|ýene}}, {{t+|tk|baryp}}
