--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -57,6 +57,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 
 ====Derived terms====
 {{der3|en
+|balance weight
 |bantamweight
 |biweight
 |[[body weight]], [[bodyweight]]
