/* Verb */ a quotation to compensate for the deleted one <blow#60386351>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -76,6 +76,8 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #: {{rfquotek|en|Sir Walter Scott}}
 # {{lb|en|obsolete}} To talk loudly; to boast; to storm.
 #* {{quote-journal|en|date=February 6, 1866|work=Virginia City Territorial Enterprise|title=Remarkable Dream|author=Mark Twain|volume=|number=|passage=I don't want the worst characters in hell to be running after me with friendly messages and little testimonials of admiration for Smythe, and '''blowing''' about his talents, and bragging on him, and belching their villainous fire and brimstone all through the atmosphere and making my place smell worse than a menagerie. }}
+#* {{ante|1940}} Mildred Haun, "Shin-Bone Rocks" in ''The Hawk's Done Gone'' p. 218:
+#*: He didn't just set around and try to out sweettalk somebody; he got out and out-fit somebody.  He wouldn't be '''blowing''' when he told his boys how he fit for the woman he got.
 #* '''1969''', Charles Ambrose McCarthy, ''The Great Molly Maguire Hoax'' (page 113)
 #*: At the breaking edge with him and completely fed up with his everlasting bragging and '''blowing''' about his personal exploits, and desirous of putting him somewhere, anywhere, so they wouldn't be continuously annoyed by him, {{...}}
 #* '''1976''', David Toulmin, ''Blown Seed'' (page 148)
