+rhyme [[Rhymes:Italian/ulti|-ulti]] <multi#60397937>

--- a/en/m/multi.34076.wikitext
+++ b/en/m/multi.34076.wikitext
@@ -76,6 +76,9 @@ From {{af|eo|multe|t1=a lot|-i}}.
 
 ==Italian==
 
+===Pronunciation===
+* {{rhymes|it|ulti}}
+
 ===Verb===
 {{head|it|verb form}}
 
