/* English */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <ferret#60400092>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -122,7 +122,7 @@ From {{inh|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{d
 {{en-noun|?}}
 
 # {{lb|en|dated}} A [[tape]] of [[silk]], [[cotton]], or [[ribbon]], used to tie [[document]]s, clothing, etc. or along the edge of fabric.
-#* {{rfdate|en}}, {{w|Charles Dickens}}, ''{{w|Bleak House}}''
+#* {{RQ:Dickens Bleak House}}
 #*: red tape and green '''ferret'''
 
 ===Further reading===
