t+it:[[annuncio]] t+it:[[raccomandazione]] ([[WT:EDIT|Assisted]]) <advertisement#60404229>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -91,7 +91,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Indonesian: {{t+|id|iklan}}, {{t+|id|reklame}}
 * Interlingua: {{t|ia|annuncio}}, {{t|ia|publicitate}}, {{t|ia|reclamo}}, {{t|ia|propaganda}}
 * Interlingue: {{t|ie|reclam}}, {{t|ie|anuncie}}
-* Italian: {{t+|it|annuncio|m}}, {{t+|it|pubblicità|f}}
+* Italian: {{t+|it|annuncio|m}}, {{t+|it|pubblicità|f}}, {{t+|it|raccomandazione|f}}
 * Japanese: {{t+|ja|広告|tr=こうこく, kōkoku}}, {{t|ja|CM|tr=シーエム, shī-emu|alt=ＣＭ}}
 * Kazakh: {{t+|kk|жарнама}}
 * Khmer: {{t+|km|ឃោសនា}}, {{t|km|ការផ្សាយពាណិជ្ជកម្ម}}, {{t|km|ការផ្សាយ}}, {{t|km|ដំណឹងពាណិជ្ជកម្ម}} {{qualifier|on radio or TV}}
@@ -154,6 +154,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Hebrew: {{t+|he|מוֹדָעָה|f|tr=moda'a|sc=Hebr}}
 * Hungarian: {{t+|hu|közlemény}}, {{t+|hu|értesítés}}, {{t+|hu|hirdetmény}}
 * Interlingue: {{t|ie|anuncie}}
+* Italian: {{t+|it|annuncio|m}}
 * Kurdish:
 *: Sorani: {{t+|ku|بۆزانین}}
 {{trans-mid}}
