--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -33,7 +33,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 #*: ‘That was a '''symple''' cause,’ seyde Sir Trystram, ‘for to sle a good knyght for seyynge well by his maystir.’
 # {{lb|en|now|colloquial}} Feeble-minded; [[foolish]].
 # {{lb|en|heading|technical}} Structurally uncomplicated.
-## {{lb|en|chemistry}} Consisting of one [[single]] substance; [[uncompounded]].
+## {{lb|en|chemistry|pharmacology}} Consisting of one [[single]] substance; [[uncompounded]].
 ## {{lb|en|mathematics}} Of a group: having no [[normal]] [[subgroup]].
 ## {{lb|en|botany}} Not [[compound]], but possibly [[lobed]].
 ## {{q|of a steam engine}} Using [[steam]] only once in its [[cylinders]], in contrast to a [[compound]] engine, where steam is used more than once in [[high-pressure]] and [[low-pressure]] cylinders.
@@ -226,7 +226,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|pharmacology}} A [[herbal]] [[preparation]] made from one [[plant]], as opposed to something made from more than one plant.
+# {{lb|en|pharmaceutical drug}} A [[herbal]] [[preparation]] made from one [[plant]], as opposed to something made from more than one plant.
 #* {{RQ:Florio Montaigne Essayes|chapter=37|book=II|passage=I know there are some '''simples''', which in operation are moistening and some drying.}}
 #* {{RQ:Temple Health}}
 #*: What virtue is in this remedy lies in the naked '''simple''' itself as it comes over from the Indies.
