--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -144,7 +144,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 * Marathi: {{t|mr|सरळ}}
 * Mirandese: {{t|mwl|lhano}}
 * Mongolian: {{t+|mn|энгийн}}
-* Nepali: {{t-needed|ne}}
+* Nepali: {{t|ne|साधा}}, {{t|ne|सरल}}, {{t|ne|साधारण}}
 * Norman: {{t|nrf|sîmpl'ye|m|f}}
 * Novial: {{t|nov|simpli}}
 * Occitan: {{t+|oc|simple}}
@@ -212,6 +212,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 {{trans-mid}}
 * Manx: {{t|gv|meecheeallagh}}, {{t|gv|neuchreeney}}, {{t|gv|giare-cheeayllagh}}
 * Marathi: {{t|mr|भोळा}}
+* Nepali: {{t|ne|सीधा}}
 * Polish: {{t+|pl|prostak}} {{qual|noun}}
 * Portuguese: {{t+|pt|simples}}
 * Romanian: {{t+|ro|simplu}}
