--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -147,6 +147,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Irish: {{t|ga|meáchan|m}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t+|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t+|ja|体重|tr=taijū}}
+* Kapampangan: {{t|pam|bayat}}
 * Kazakh: {{t|kk|салмақ|sc=Cyrl}}
 * Khmer: {{t+|km|ទម្ងន់}}
 * Korean: {{t+|ko|중량}} ({{t+|ko|重量}}), {{t+|ko|무게}}, {{t+|ko|체중}} {{qualifier|body weight}}
