--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -60,9 +60,10 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 * Greek: {{t|el|Σέρ|m}}
 * Hungarian: {{t+|hu|úr}}
 * Japanese: {{t|ja|旦那|tr=danna}}
-{{trans-mid}}
 * Latvian: {{t|lv|sers|m}}
+{{trans-mid}}
 * Lithuanian: {{t|lt|ponas|m}}
+* Middle English: {{t|enm|sire}}
 * Polish: {{t+|pl|pan|m}}
 * Portuguese: {{t+|pt|senhor|m}}
 * Russian: {{t+|ru|господи́н|m}}
