--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -189,6 +189,15 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 
 ----
 
+==Middle English==
+
+===Noun===
+{{head|enm|noun}}
+
+# {{alt form|enm|sire}}
+
+----
+
 ==Scottish Gaelic==
 
 ===Etymology===
