--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -55,7 +55,7 @@ Of {{der|en|trk|-}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 * Estonian: {{t|et|Balkan}}
 * Finnish: {{t+|fi|Balkan}}
 * French: {{t+|fr|Balkans|m}}
-* Galician: {{t|gl|Balcáns|m-p}}
+* Galician: {{t+|gl|Balcáns|m-p}}
 * Georgian: {{t|ka|ბალკანეთი}}
 * German: {{t+|de|Balkan|m}}
 * Greek: {{t+|el|Βαλκάνια|n-p}}
